made AmountFilter and CategoryFilter classes compatible with Java 8